Lots of layout fixes and updates, deliberate working w/o team info, role card overhaul.

--- a/public/styles/_core/fonts.scss
+++ b/public/styles/_core/fonts.scss
@@ -33,6 +33,7 @@
 $body-type: 'Source Code Pro', monospace;
 $semibold-type: 'SourceCodePro-SemiBold', monospace;
 $header-type: 'Roboto-Bold', sans-serif;
+$roboto: 'Roboto', sans-serif;
 $sub-header-type: "AvenirNext-DemiBold", sans-serif;
 $at-sign-type: "AvenirNext-UltraLight", sans-serif;
 
