--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -177,7 +177,7 @@
             {{#ifnoteq section 'homepage'}}
 
                 <div class="col-sm-12 col-lg-12" id="gameContent">
-
+                    <div id="join-bg"></div>
                     {{> shared/resuming }}
 
                     <!-- BODY CONTENT START -->
@@ -186,17 +186,15 @@
                 </div>
 
                 <footer id="bottom-bar" style="display: none">
-                
-                    <div class="col-sm-6 col-xs-6">
-                        <button id="btn-role-card"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1492806723/at-stake/icons/role"></button>
-                        <button id="btn-facilitator"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540839844/at-stake/icons/facilitator"></button>
-                        <div id="name-role">
-                            <span id="name"></span>
-                            <span id="role"></span>
-                        </div>
-                        
+
+                    <button id="btn-role-card"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1492806723/at-stake/icons/role"></button>
+                    <button id="btn-facilitator"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540839844/at-stake/icons/facilitator"></button>
+                    <div id="name-role">
+                        <span id="name"></span>
+                        <span id="role"></span>
                     </div>
-                    
+                    <button id="btn-team-info"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1541022175/at-stake/icons/teaminfo.svg"></button>
+                                        
                 </footer>
 
             {{else}}
