--- a/templates/partials/shared/deliberate.hbs
+++ b/templates/partials/shared/deliberate.hbs
@@ -2,7 +2,7 @@
 <div id="deliberate">
 
 	{{!-- WAIT --}}
-	<div class="screen">
+	<div class="screen form">
 
 		{{> component/instructions 
 				decider=true
