--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -29,6 +29,7 @@ $color-red: #ff4700;
 $red-dark: #ff3000;
 $red-light: #ff8c53;
 $strawberry: #e4323c;
+$strawberry-two: #e5333c;
 
 // Orange
 $color-orange: #ff9600;
