--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -141,6 +141,10 @@
                 <section id="role-card" class="inner-modal" data-clone="true" data-keep_open="true">
 
                 </section>
+                {{!-- TEAM INFO OVERLAY --}}
+                <section id="team-info" class="inner-modal" data-clone="true" data-keep_open="true">
+
+                </section>
 
             {{/ifnoteq}}
 
@@ -194,6 +198,7 @@
                         <span id="role"></span>
                     </div>
                     <button id="btn-team-info"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1541022175/at-stake/icons/teaminfo.svg"></button>
+                    <button id="btn-call-vote"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1541097057/at-stake/icons/calltovote.svg"></button>
                                         
                 </footer>
 
