--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -1,3 +1,4 @@
+
 // ** GAME LOBBY ** //
 #lobby {
 
@@ -503,7 +504,7 @@
 		.access-code {
 			max-width: 200px;
 			height: auto;
-			font-family: $semibold-type;
+			@include semibold-type;
 			font-size: 36px !important;
 			padding: 5px;
 			box-shadow: inset 0 -4px 0 0 $cerulean-blue;
