--- a/templates/partials/shared/rolecard.hbs
+++ b/templates/partials/shared/rolecard.hbs
@@ -15,25 +15,33 @@
 	<div class="description">{{{bio.html}}}</div>
 
 	<div class="agenda-wrap form">
-		{{#if needs}}
-			<h1 class="header">Needs</h1> 
 
-			<div class="agenda-item"><div class="agenda">{{needs.[0]}}</div></div>
-			<div class="agenda-item"><div class="agenda">{{needs.[1]}}</div></div>
-		{{/if}}
+		<div id="needs">
+			{{#if needs}}
+				<h1 class="header">Needs</h1> 
+
+				<div class="agenda-item"><div class="agenda">{{needs.[0]}}</div></div>
+				<span id="div"></span>
+				<div class="agenda-item"><div class="agenda">{{needs.[1]}}</div></div>
+			{{/if}}
+		</div>
 
 		{{#if secretGoal}}
+			
 			<h1 class="header"><span>&#9733;</span>Secret Goal<span>&#9733;</span></h1> 
 			<div>{{secretGoal}}</div>
+
 		{{/if}}
 		
 		{{#ifeq intro true}}
+			
 			<button class="btn submit player" type="submit" name="submit" data-event="game:ready" data-package="role">
 				Continue
 			</button>
 			<button id="btn-role-next" class="btn decider next-step" type="submit" name="submit">
 				Continue
 			</button>
+
 		{{/ifeq}}
 	</div>
 
