--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -173,7 +173,10 @@
 		'game:decider',
 		'game:refresh_screen',
 		'game:ready',
-		'game:team_info'
+		'game:team_info',
+
+		'game:rank_next',
+		'game:rank_prev'
 	
 	];
 
