--- a/templates/partials/shared/rolecard.hbs
+++ b/templates/partials/shared/rolecard.hbs
@@ -28,7 +28,7 @@
 
 		{{#if secretGoal}}
 			
-			<h1 class="header"><span>&#9733;</span>Secret Goal<span>&#9733;</span></h1> 
+			<h1 class="header"><span class="star">&#9733;</span>Secret Goal<span class="star">&#9733;</span></h1> 
 			<div>{{secretGoal}}</div>
 
 		{{/if}}
