--- a/public/styles/core.scss
+++ b/public/styles/core.scss
@@ -102,6 +102,7 @@ button, input {
 .body {
 
   font-family: $body-type;
+  font-size: 13px;
   color: black;
 	
 }
@@ -275,11 +276,152 @@ footer {
 	}
 
 }
-// #gameContent {
 
-// 	padding: 40px 15px;
-// 	padding-top: 3%;
-//   text-align: center;
+// Range input
+input[type=range] {
+	-webkit-appearance: none;
+	width: 100%;
+	margin: 6.8px 0;
+  }
+  input[type=range]:focus {
+	outline: none;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+	width: 100%;
+	height: 10px;
+	cursor: pointer;
+	box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+	background: linear-gradient(90deg, $strawberry 50%, $bluegreen 50%, $bluegreen 100%);
+	border-radius: 50px;
+  }
+  input[type=range]::-webkit-slider-thumb {
+	box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.25), inset 0 -2px 0 0 $yellow;
+	border: 0px solid #00001e;
+	height: 25px;
+	width: 25px;
+	border-radius: 50px;
+	background: #0067d8;
+	cursor: pointer;
+	-webkit-appearance: none;
+	margin-top: -7px;
+  }
+  input[type=range]:focus::-webkit-slider-runnable-track {
+	background: linear-gradient(90deg, $strawberry 50%, $bluegreen 50%, $bluegreen 100%);
+  }
+  input[type=range]::-moz-range-track {
+	width: 100%;
+	height: 10px;
+	cursor: pointer;
+	box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+	background: linear-gradient(90deg, $strawberry 50%, $bluegreen 50%, $bluegreen 100%);
+	border-radius: 50px;
+  }
+  input[type=range]::-moz-range-thumb {
+	box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.25), inset 0 -2px 0 0 $yellow;
+	border: 0px solid #00001e;
+	height: 25px;
+	width: 25px;
+	border-radius: 50px;
+	background: #0067d8;
+	cursor: pointer;
+	margin-top: -7px;
+  }
+  input[type=range]::-ms-track {
+	width: 100%;
+	height: 11.4px;
+	cursor: pointer;
+	background: transparent;
+	border-color: transparent;
+	color: transparent;
+  }
+  input[type=range]::-ms-fill-lower {
+	width: 100%;
+	height: 10px;
+	cursor: pointer;
+	box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+	background: linear-gradient(90deg, $strawberry 50%, $bluegreen 50%, $bluegreen 100%);
+	border-radius: 50px;
+  }
+  input[type=range]::-ms-fill-upper {
+	width: 100%;
+	height: 10px;
+	cursor: pointer;
+	box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+	background: linear-gradient(90deg, $strawberry 50%, $bluegreen 50%, $bluegreen 100%);
+	border-radius: 50px;
+  }
+  input[type=range]::-ms-thumb {
+	box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.25), inset 0 -2px 0 0 $yellow;
+	border: 0px solid #00001e;
+	height: 25px;
+	width: 25px;
+	border-radius: 50px;
+	background: #0067d8;
+	cursor: pointer;
+	margin-top: -7px;
+  }
+  input[type=range]:focus::-ms-fill-lower {
+	background: linear-gradient(90deg, $strawberry 50%, $bluegreen 50%, $bluegreen 100%);
+  }
+  input[type=range]:focus::-ms-fill-upper {
+	background: linear-gradient(90deg, $strawberry 50%, $bluegreen 50%, $bluegreen 100%);
+  }
+  
 
-// }
+// Toggle switch
+.toggle {
+	.switch {
+		position: relative;
+		display: inline-block;
+		width: 60px;
+		height: 34px;
+		top: 3px;
+	}
+
+	.switch input { 
+		opacity: 0;
+		width: 0;
+		height: 0;
+	}
+
+	.slider {
+		position: absolute;
+		cursor: pointer;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		width: 50px;
+		height: 10px;
+		border-radius: 10px;
+		background-color: $strawberry-two;
+		@include transition(all .4s);
+	}
+
+	.slider:before {
+		position: absolute;
+		content: "";
+		left: -5px;
+		bottom: -55%;		
+		width: 25px;
+		height: 25px;
+		border-radius: 50%;
+		box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.25), inset 0 -2px 0 0 $yellow;
+		background-color: $cerulean-blue;
+		@include transition(all .4s);
+	}
+
+	input:checked + .slider {
+		background-color: $bluegreen;
+	}
+
+	input:focus + .slider {
+		box-shadow: 0 0 1px $bluegreen;
+	}
+
+	input:checked + .slider:before {
+		@include transform(translateX(145%));
+	}
+}
+
 // END Main Content
